engine/baml-lib/baml/tests/validation_files/expr/missing_return_value.baml
function NoRet(x: int) {
    1
}

// error: function must have a return type: e.g. function Foo() -> int
//   -->  expr/missing_return_value.baml:1
//    | 
//    | 
//  1 | function NoRet(x: int) {
//  2 |     1
//  3 | }
//    | 
